[gd_scene load_steps=11 format=3 uid="uid://b8ggrnwqvq4id"]

[ext_resource type="Script" uid="uid://ywx4xvbuy2x0" path="res://Game/HUD.gd" id="1_eqhe0"]
[ext_resource type="Script" uid="uid://c70040su6a6x8" path="res://Game/GameScene.gd" id="1_k77ap"]
[ext_resource type="Script" uid="uid://c3r1r53jsao87" path="res://Game/GameLabel.gd" id="3_haeiw"]
[ext_resource type="Script" uid="uid://dmmnw4nxkpdpf" path="res://Game/CountdownLabel.gd" id="4_b5kf5"]

[sub_resource type="Animation" id="Animation_k77ap"]
resource_name = "GameExpand"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/GameLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.7, 0.7), Vector2(0.9, 0.9), Vector2(1.1, 1.1), Vector2(1.3, 1.3), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/GameLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b5kf5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/GameLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/GameLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_haeiw"]
_data = {
&"GameExpand": SubResource("Animation_k77ap"),
&"RESET": SubResource("Animation_b5kf5")
}

[sub_resource type="Animation" id="Animation_hvuor"]
resource_name = "CountPulse"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_i2arf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i2arf"]
_data = {
&"CountPulse": SubResource("Animation_hvuor"),
&"RESET": SubResource("Animation_i2arf")
}

[node name="GameScene" type="Node2D"]
position = Vector2(0, -1)
script = ExtResource("1_k77ap")

[node name="StageRoot" type="Node2D" parent="."]

[node name="PlayerRoot" type="Node2D" parent="."]

[node name="PlayerSpawns" type="Node2D" parent="."]

[node name="P1" type="Marker2D" parent="PlayerSpawns"]
position = Vector2(560, 600)

[node name="P2" type="Marker2D" parent="PlayerSpawns"]
position = Vector2(1360, 600)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 460)
zoom = Vector2(0.8, 0.8)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 927.0
offset_top = 924.0
offset_right = 967.0
offset_bottom = 964.0
script = ExtResource("1_eqhe0")
metadata/_edit_use_anchors_ = true

[node name="P1Percent" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.65
anchor_top = -1.6
anchor_right = -0.975
anchor_bottom = 0.4
offset_left = -314.0
offset_top = 61.0
offset_right = -274.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 75
text = "0%"
metadata/_edit_use_anchors_ = true

[node name="P1Stocks" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.45
anchor_top = -0.65
anchor_right = -2.45
anchor_bottom = -0.65
offset_left = -322.0
offset_top = 96.0
offset_right = -218.0
offset_bottom = 199.0
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 75
text = "3 x"
metadata/_edit_use_anchors_ = true

[node name="P2Percent" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.475
anchor_top = -1.525
anchor_right = 1.2
anchor_bottom = 0.475
offset_left = 409.0
offset_top = 62.0
offset_right = 449.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "0%"
metadata/_edit_use_anchors_ = true

[node name="P2Stocks" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.875
anchor_top = -0.725
anchor_right = 0.125
anchor_bottom = 1.275
offset_left = 425.0
offset_top = 99.0
offset_right = 489.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "3 x"
metadata/_edit_use_anchors_ = true

[node name="P1StocksImage" type="TextureRect" parent="HUD"]
visible = false
layout_mode = 0
offset_top = 70.0
offset_right = 40.0
offset_bottom = 110.0

[node name="P2StocksImage" type="TextureRect" parent="HUD"]
visible = false
layout_mode = 0
offset_left = 123.0
offset_top = 70.0
offset_right = 163.0
offset_bottom = 110.0

[node name="GameEndUI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="GameEndUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -102.5
offset_right = 255.0
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameLabel" type="Label" parent="GameEndUI/CenterContainer"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "GAME !"
horizontal_alignment = 1
script = ExtResource("3_haeiw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameEndUI/CenterContainer/GameLabel"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_haeiw")
}
speed_scale = 2.0

[node name="GameStartUI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="GameStartUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountdownLabel" type="Label" parent="GameStartUI/CenterContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 200
script = ExtResource("4_b5kf5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameStartUI/CenterContainer/CountdownLabel"]
libraries = {
&"": SubResource("AnimationLibrary_i2arf")
}
